cmake_minimum_required(VERSION 3.10)

add_executable(S0001_TwoSum S0001_TwoSum.cpp)

add_executable(S0002_AddTwoNumbers S0002_AddTwoNumbers.cpp)

add_executable(S0003_LongestSubstring S0003_LongestSubstring.cpp)

add_executable(S0051_NQueens S0051_NQueens.cpp)

add_executable(S0060_PermutationSequence S0060_PermutationSequence.cpp)

add_executable(S0107_BinaryTreeLevelOrderTraversalII S0107_BinaryTreeLevelOrderTraversalII.cpp)

add_executable(S0257_BinaryTreePaths S0257_BinaryTreePaths.cpp)

add_executable(S0695_MaxAreaOfIsland S0695_MaxAreaOfIsland.cpp)
